Squished the two signup pages into one because moving the data across them was very annoying. Got picutres uploaded to database correctly.

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -154,6 +154,9 @@ h1 {
 #signup-truckpicpreview{
   max-width: 100px;
 }
+#signup-menupicpreview{
+  max-width: 100px;
+}
 
 /*--------------Top Bar------------------*/
 .ui-icon-loading{
